--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <script src="./src/main.js"></script>
   </body>
 </html>
